syntax = "proto3";

package proto;
option go_package = "controllerv1";

message GetPKCEAuthInfoRequest {}

message GetPKCEAuthInfoResponse {
  string client_id = 1;
  string auth_endpoint = 2;
  string token_endpoint = 3;
  string redirect_uri = 4;
  string audience = 5;
}
